# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: from_pyci.yaml
gendiff/: __init__.py  cli.py  files.py  gendiff.py  parse_data.py
gendiff/formatters/: converter.py  json_formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_flat.py  test_plain.py  test_tool.py  test_tree.py
tests/fixtures/: fixrures.py  result_plain_json.txt  result_plain_mix.txt  result_plain_yaml.txt  result_tree_json.txt  result_tree_json_format.txt  result_tree_mix.txt  result_tree_plain_json.txt  result_tree_yaml.txt
