[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Homework 2"
authors = ["Eugene Kuzmin <coder108@gmail.com>"]
readme = "README.md"
packages = [ { include = "gendiff"  }, ]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

